<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Choozie</string>
    <string name="title_activity_start">Choozie</string>
    <string name="title_activity_choosie">Choozie</string>
    <string name="title_activity_comment_screen">Choozie - Post Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="buttonFeed">Feed</string>
    <string name="buttonPost">Post</string>
    <string name="buttonMe">Me</string>
    <string name="button_submit">Share</string>
    <string name="editTextQuestion">Ask a question</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to </string>
    <string name="app_id">515799855110300</string>
    <string name="login">Login</string>
    <string name="load_more">Load more</string>
    <string name="how_long_ago_was_it_taken">How long ago was it taken</string>
    <string name="logout">Logout</string>
    <string name="share_on">Share on:</string>
    <string name="desc">ImageView Content Descripotion</string>
    <string name="create_new_post">Create new post</string>
    <string name="title_activity_votes_screen">VotesScreenActivity</string>
    <string name="title_activity_enlarge_photo">EnlargePhoto</string>
    <string name="general_content_description">Widget Content Description</string>
    <string name="feed_is_empty_message">You have no posts on your feed!\nBe the first to upload a Choozie Post!</string>
    <string name="empty_string" />
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="use_Choozie_advanced_super_camera">use Choozie advanced super camera</string>
    <string name="settings">Settings</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="share">SHARE VIA</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_gallery">GalleryActivty</string>
    <string name="title_activity_camera_main">CameraMainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="posts">My Posts:</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="new_post">New Post</string>
    <string name="votes">My Votes:</string>
    <string name="bio_watermark">Add a short bio by clicking the Edit button.</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="edit_profile_header_text">Edit Profile</string>
    <string name="nickname_hint">Your nickname</string>
    <string name="bio_hint">Write a short bio...</string>
    <string name="nickname">Nickname:</string>
    <string name="info">Info:</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="invite_message">Hey!\nCheck out Choozie. A new app for instant opinions on Fashion Dilemmas!\nDownload @ Google Play:\nhttps://play.google.com/store/apps/details?id=com.choozie.app</string>
    <string name="invite_title">Invite a Friend</string>
    <string name="invite">Invite a Friend</string>
    <string name="nav_bar_home">HOME</string>
    <string name="nav_bar_post">POST</string>
    <string name="nav_bar_me">ME</string>
    <string-array name="genders">
        <item >Gender</item>
        <item >Male</item>
        <item >Female</item>
    </string-array>
    <string name="gender">Gender</string>

</resources>