<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".ProfileEditActivity" >

    <RelativeLayout
        android:id="@+id/edit_profile_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_selector" >

        <TextView
            android:id="@+id/edit_profile_header_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/edit_profile_header_text"
            android:textColor="@color/White"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/edit_profile_save_changes_image_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/header_selector"
            android:contentDescription="@string/general_content_description"
            android:src="@drawable/post_icon" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/edit_profile_user_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/edit_profile_header_layout"
        android:layout_margin="@dimen/view_choosie_post_margin"
        android:background="@color/Transparent"
        android:contentDescription="@string/general_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/com_facebook_profile_default_icon" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_user_photo"
        android:layout_margin="@dimen/view_choosie_post_margin" >

        <TableRow
            android:id="@+id/edit_profile_nickname_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/edit_profile_nickname_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/nickname"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@color/Black" />

            <EditText
                android:id="@+id/edit_profile_nickname_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/view_choosie_post_text_margin"
                android:layout_weight="1"
                android:background="@color/White"
                android:ems="10"
                android:hint="@string/nickname_hint"
                android:inputType="text|textNoSuggestions"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/edit_profile_info_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/share_button_magin" >

            <TextView
                android:id="@+id/edit_profile_info_label"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/info"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="@color/Black" />

            <EditText
                android:id="@+id/edit_profile_info_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/view_choosie_post_text_margin"
                android:layout_weight="1"
                android:background="@color/White"
                android:ems="10"
                android:hint="@string/bio_hint"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

</RelativeLayout>