<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".StartActivity" />

    <ImageButton
        android:id="@+id/fbLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@color/White"
        android:contentDescription="@string/com_facebook_loginview_log_in_button"
        android:scaleType="center"
        android:src="@drawable/connect" />

    <Button
        android:id="@+id/fbLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fbLoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/logout" />

    <ImageButton
        android:id="@+id/goToApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fbLogoutButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="@color/White"
        android:contentDescription="@string/app_name"
        android:src="@drawable/go_to_app"
        android:visibility="invisible" />

</RelativeLayout>
