<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="15dp"
    android:paddingTop="@dimen/view_choosie_post_margin"
    android:scrollbars="none|vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:layout_marginBottom="@dimen/view_choosie_post_margin" >

        <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/Gray"
            android:contentDescription="@string/desc"
            android:src="@drawable/image_selected_v" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_photo1"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/image_frame_post"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/camera"
            android:clickable="true" />

        <ImageView
            android:id="@+id/image_photo2"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image_photo1"
            android:background="@drawable/image_frame_post"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/camera"
            android:clickable="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_choosie_post_margin"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top|left"
        android:hint="@string/editTextQuestion"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="2"
        android:minLines="2" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/share_text_top_margin"
        android:text="@string/share"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_choosie_post_margin" >

        <ToggleButton
            android:id="@+id/tbFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/share_button_magin"
            android:background="@drawable/facebook_square_bw"
            android:textOff="@string/empty_string"
            android:textOn="@string/empty_string" />

        <TextView
            android:id="@+id/tvFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

</LinearLayout>