<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/view_navBar_layout_button_feed"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selected_button"
            android:clickable="true"
            android:visibility="visible" >
                        
        <ImageView
                android:id="@+id/view_navBar_layout_button_image_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@string/general_content_description"
                android:src="@drawable/icon_home" />
            
<!--             android:src="@drawable/list_button" -->
<!--                 android:layout_width="45dp" -->
<!--                 android:layout_height="30dp" -->

        <TextView
            android:id="@+id/view_navBar_text_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_navBar_layout_button_image_feed"
            android:layout_centerHorizontal="true"
            android:text="@string/nav_bar_home"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/nav_bar_text_size"
            android:textColor="@color/White" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_navBar_layout_button_post"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_selector_alpha"
            android:clickable="true"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/view_navBar_layout_button_image_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@string/general_content_description"
                android:src="@drawable/icon_camera" />
            
<!--             android:src="@drawable/camera" -->

            <TextView
                android:id="@+id/view_navBar_text_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_navBar_layout_button_image_post"
                android:layout_centerHorizontal="true"
                android:text="@string/nav_bar_post"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/nav_bar_text_size"
                android:textColor="@color/White" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_navBar_layout_button_profile"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_selector_alpha"
            android:clickable="true"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/view_navBar_layout_button_image_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@string/general_content_description"
                android:src="@drawable/icon_profile" />
            
<!--             android:src="@drawable/user_blue" -->

            <TextView
                android:id="@+id/view_navBar_text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_navBar_layout_button_image_profile"
                android:layout_centerHorizontal="true"
                android:text="@string/nav_bar_me"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/nav_bar_text_size"
                android:textColor="@color/White" />

        </RelativeLayout>

    </LinearLayout>

</merge>